--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </h3>
 
         <p>
-          And I am also the Founder of Codesphere Community, we inspire through
+          And I am also the Co founder Sobat Coding, we inspire through
           inclusive coding learning and collaborative projects. Come join us for
           self-development and joint innovation!
         </p>
