--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <a href="https://youtube.com/" target="_blank"
             ><i class="bx bxl-youtube"></i
           ></a>
-          <a href="https://www.instagram.com/Lexxxy71" target="_blank"
+          <a href="https://www.instagram.com/lexxyyyy71/  " target="_blank"
             ><i class="bx bxl-instagram-alt"></i
           ></a>
           <a href="https://wa.me/6282125887064" target="_blank"
